src/App.css
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	outline: none;
	user-select: none;
}
a {
	all: unset;
}

.App {
	display: flex;
	align-items: flex-start;
	justify-content: center;
	text-align: left;
	height: 100vh;
	width: 100vw;
	padding: 36px;
	background: #faf8ef;
	color: #776e65;
	font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
}

.highlight_text {
	font-weight: bold;
}
.game_container {
	max-width: 500px;
	width: 500px;
}

/* ---------------- Header ---------------- */

.header {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.header_left {
	padding-top: 16px;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	gap: 12px;
}

.header_title {
	font-size: 80px;
	cursor: pointer;
}
.header_subtitle {
	font-size: 18px;
}

.game_rules {
	width: fit-content;
	display: flex;
	align-items: center;
	justify-content: flex-start;
	gap: 8px;
	border-bottom: 1px solid #776e65;
	cursor: pointer;
	margin-top: 4px;
}

.header_right {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-end;
	gap: 48px;
}

.score_board {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 4px;
}
.score {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 4px;
	padding: 10px 0px 4px 0px;
	border-radius: 3px;
	background: #bbada0;
}
.score_head {
	font-size: 13px;
	color: #eee4da;
	font-weight: bold;
}
.score_value {
	font-size: 24px;
	font-weight: 900;
	color: #fff;
	padding: 0px 30px;
}
/* ------------- End of Header ------------ */

/* _________ Button _________ */

.btn_container {
	display: flex;
	align-items: center;
	justify-content: center;
}

.action_btn {
	display: flex;
	align-items: center;
	justify-content: center;
	background: #8f7a66;
	border-radius: 3px;
	padding: 0 20px;
	color: #f9f6f2;
	height: 40px;
	cursor: pointer;
	text-align: center;
	flex-shrink: 0;
	border: none;
	font-size: 18px;
	font-weight: bold;
}
.action_btn:hover {
	background: #85603f;
	color: #fff;
}

/* _____ End of Button ______ */

/* ---------------- Footer --------------- */

.footer {
	font-size: 18px;
}

/* ------------- End of Footer ------------ */

/* -------------- GameBoard ------------------ */

.game_board {
	position: relative;
	margin: 32px 0px;
	padding: 15px;
	background: #bbada0;
	width: 500px;
	height: 500px;
	border-radius: 6px;
}

.tile_container {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
	gap: 15px;
	width: 100%;
	height: 100%;
}
.tile_container.for_64 {
	gap: 9px;
}

/* ------- Tiles -------- */
.tile {
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	height: 22.5%;
	width: 22.5%;
	border-radius: 3px;
	background: #cdc1b4;
	transition: all 0.5s ease-in;
}
.tile.for_64 {
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	height: 10.75%;
	width: 10.75%;
	border-radius: 2px;
	background: #cdc1b4;
	transition: all 0.5s ease-in;
}
.tile_value {
	color: #776e65;
	font-weight: 900;
	font-size: 54px;
}

.for_64 .tile_value {
	font-size: 16px;
}

/* ---- End of Tiles ---- */

/* ------------- End of GameBoard ------------- */

/* ----------------- GameOver ----------------- */

.gameOver_container {
	position: absolute;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 36px;
	height: 100%;
	width: 100%;
	top: 0px;
	left: 0px;
	background-color: rgba(255, 255, 255, 0.5);
	border-radius: 6px;
}

.message {
	font-size: 54px;
	font-weight: 900;
}

/* -------------- End of GameOver ------------- */

/* ---------------- VisitsCount --------------- */

.visits_container {
	position: absolute;
	top: 0;
	right: 0;
}

.visits_text {
	display: flex;
	align-items: center;
	justify-content: center;
	background: #8f7a66;
	border-radius: 0px 0px 0px 3px;
	padding: 0 20px;
	color: #f0f0f0;
	height: 30px;
	cursor: pointer;
	text-align: center;
	flex-shrink: 0;
	border: none;
	font-size: 14px;
	font-weight: bold;
}

.visits_text:hover {
	background: #85603f;
	color: #fff;
}
/* ------------ End of VisitsCount ------------ */

